Setup live reload + fixed layout shifts
Fixed layout shifting when adding new elements to lists, they're all stable now, and setup live reloading with livereload, now requires the app be run via python run.py instead of the flask dev server for it to work

--- a/static/website.css
+++ b/static/website.css
@@ -12,7 +12,7 @@ html{
 .educationGrid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     column-gap: 2em;
 }
 
@@ -118,7 +118,7 @@ html{
 
 /* End of overidables */
 
-@media (max-width: 900px) {
+@media (max width: 900px) {
     html{
         font-size: 13px;
     }
@@ -165,7 +165,7 @@ html{
 
     .educationGrid{
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
         column-gap: 1em;
         row-gap: 1em;
         justify-items: center;
@@ -577,6 +577,13 @@ html{
     height: 2px;
 }
 
+.h-200px{
+  height: 200px;
+}
+
+.h-100px{
+  height: 100px;
+}
 
 .mW-800px{
     max-width: 800px;
